<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/white"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_crop_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textColor="@color/dark_green"
        android:text="@string/cabbage" />

    <TextView
        android:id="@+id/tv_volume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/dark_green"
        android:text="@string/volume_500kg" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/dark_green"
        android:text="@string/price_30_kg" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/dark_green"
        android:text="@string/live" />

    <TextView
        android:id="@+id/tv_date_listed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:textColor="@color/dark_green"
        android:text="@string/date_2023_10_26" />

</LinearLayout>