<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_notification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_new_order_title"
        android:textColor="@color/dark_green"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_notification_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_new_order_message"
        android:textColor="@color/dark_green"/>

    <TextView
        android:id="@+id/tv_notification_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_timestamp_5_min"
        android:textSize="12sp"
        android:textColor="@color/dark_green"/>

</LinearLayout>